--- a/maven/xtend.maven/pom.xml
+++ b/maven/xtend.maven/pom.xml
@@ -9,23 +9,13 @@
 
 	<groupId>org.eclipse.xtext.example</groupId>
 	<artifactId>xtend-maven-classic</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.xtend2</groupId>
-			<artifactId>org.eclipse.xtend2.lib</artifactId>
-			<version>2.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>org.eclipse.xtext.xtend2.lib</artifactId>
-			<version>2.2.0.v201112121625</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>com.google.inject</artifactId>
-			<version>3.0.0.no_aop</version>
+			<groupId>org.eclipse.xtend</groupId>
+			<artifactId>org.eclipse.xtend.standalone</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
@@ -45,7 +35,10 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>xtend-gen</source>
+								<source>src-gen</source>
+							</sources>
+							<sources>
+								<source>${project.build.directory}/xtend-gen</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -66,9 +59,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.eclipse.xtend2</groupId>
+				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<version>2.2.0</version>
+				<version>2.3.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -96,13 +89,13 @@
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
-											org.eclipse.xtend2
+											org.eclipse.xtend
 										</groupId>
 										<artifactId>
 											xtend-maven-plugin
 										</artifactId>
 										<versionRange>
-											[2.2.0,)
+											[2.3.0,)
 										</versionRange>
 										<goals>
 											<goal>compile</goal>
@@ -121,19 +114,10 @@
 		</pluginManagement>
 	</build>
 
-
 	<repositories>
-		<repository>
-			<id>maven.eclipse.org</id>
-			<url>http://maven.eclipse.org/nexus/content/groups/public/</url>
-		</repository>
 		<repository>
 			<id>xtend</id>
 			<url>http://build.eclipse.org/common/xtend/maven/</url>
-		</repository>
-		<repository>
-			<id>xtext</id>
-			<url>http://build.eclipse.org/common/xtext/maven/maven-snapshot/final/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
